--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "preinstall": "yarn run build",
     "prepublish": "yarn run build",
     "build": "tsc"
   },
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "pixi.js": "^6.3.0",
-    "progress-promise": "^0.0.6"
+    "progress-promise": "^0.0.6",
+    "missmoode/sparky": "^1.0.0"
   }
 }
