--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "pixi.js": "^6.3.0",
-    "progress-promise": "^0.0.6",
-    "missmoode/sparky": "^1.0.0"
+    "progress-promise": "^0.0.6"
   }
 }
