--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
   "author": "missmoode",
   "license": "MIT",
   "private": true,
-  "peerDependencies": {
-    "@pixi/core": "^6.3.0",
-    "@pixi/display": "^6.3.0",
-    "@pixi/math": "^6.3.0",
-    "@pixi/utils": "^6.3.0"
-  },
   "devDependencies": {
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "progress-promise": "^0.0.6"
+    "progress-promise": "^0.0.6",
+    "@pixi/core": "^6.3.0",
+    "@pixi/display": "^6.3.0",
+    "@pixi/math": "^6.3.0",
+    "@pixi/utils": "^6.3.0"
   }
 }
