--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@pixi/constants": "^6.3.0",
     "@pixi/core": "^6.3.0",
     "@pixi/display": "^6.3.0",
+    "@pixi/loaders": "^6.3.0",
     "@pixi/math": "^6.3.0",
     "@pixi/runner": "^6.3.0",
     "@pixi/settings": "^6.3.0",
     "@pixi/ticker": "^6.3.0",
-    "@pixi/utils": "^6.3.0",
-    "progress-promise": "^0.0.6"
+    "@pixi/utils": "^6.3.0"
   }
 }
