--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublish": "yarn run build",
-    "build": "tsc"
+    "build": "rm -r dist && tsc"
   },
   "author": "missmoode",
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "cash-rm": "^0.2.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
