--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "cash-rm": "^0.2.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "@pixi/app": "^6.3.0",
