--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     "lib": ["DOM", "ES2015"],
     "target": "es5",
     "module": "commonjs",
+    "moduleResolution": "node",
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "noImplicitOverride": true
+    "noImplicitOverride": true,
+    "resolveJsonModule": true
   }
 }
