--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-typescript": "^7.16.7",
     "@pixi/app": "^6.3.0",
     "@pixi/constants": "^6.3.0",
     "@pixi/core": "^6.3.0",
@@ -24,19 +26,17 @@
     "@pixi/settings": "^6.3.0",
     "@pixi/ticker": "^6.3.0",
     "@pixi/utils": "^6.3.0",
-    "@types/babel__core": "^7.1.19",
-    "@types/vinyl-fs": "^2.4.12",
-    "@babel/core": "^7.17.8",
-    "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/stream": "^2.0.0",
+    "@types/babel__core": "^7.1.19",
     "@types/gulp-template": "^5.0.1",
     "@types/merge2": "^1.3.1",
     "@types/node": "^17.0.23",
     "@types/sharp": "^0.30.0",
     "@types/vinyl": "^2.0.6",
     "@types/vinyl-buffer": "^1.0.0",
+    "@types/vinyl-fs": "^2.4.12",
     "@types/vinyl-source-stream": "^0.0.30",
     "commander": "^9.1.0",
     "copyfiles": "^2.4.1",
@@ -48,7 +48,7 @@
     "typescript": "^4.6.3",
     "vinyl": "^2.2.1",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "vinyl-fs": "^3.0.3"
+    "vinyl-fs": "^3.0.3",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
