--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pixi/utils": "^6.3.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/stream": "^2.0.0",
     "@types/babel__core": "^7.1.19",
     "@types/babel__preset-env": "^7.9.2",
@@ -44,6 +45,7 @@
     "@types/vinyl-fs": "^2.4.12",
     "@types/vinyl-source-stream": "^0.0.30",
     "commander": "^9.1.0",
+    "commonjs": "^0.0.1",
     "copyfiles": "^2.4.1",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-template": "^5.0.0",
