--- a/package.json
+++ b/package.json
@@ -20,6 +20,16 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@pixi/app": "^6.3.0",
+    "@pixi/constants": "^6.3.0",
+    "@pixi/core": "^6.3.0",
+    "@pixi/display": "^6.3.0",
+    "@pixi/loaders": "^6.3.0",
+    "@pixi/math": "^6.3.0",
+    "@pixi/runner": "^6.3.0",
+    "@pixi/settings": "^6.3.0",
+    "@pixi/ticker": "^6.3.0",
+    "@pixi/utils": "^6.3.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -37,16 +47,7 @@
     "@types/vinyl-buffer": "^1.0.0",
     "@types/vinyl-fs": "^2.4.12",
     "@types/vinyl-source-stream": "^0.0.30",
-    "@pixi/app": "^6.3.0",
-    "@pixi/constants": "^6.3.0",
-    "@pixi/core": "^6.3.0",
-    "@pixi/loaders": "^6.3.0",
-    "@pixi/display": "^6.3.0",
-    "@pixi/math": "^6.3.0",
-    "@pixi/runner": "^6.3.0",
-    "@pixi/settings": "^6.3.0",
-    "@pixi/ticker": "^6.3.0",
-    "@pixi/utils": "^6.3.0",
+    "chalk": "4.1.2",
     "commander": "^9.1.0",
     "commonjs": "^0.0.1",
     "copyfiles": "^2.4.1",
