--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "author": "missmoode",
   "version": "1.0.70",
   "description": "A library for creating and packaging pixi-based games",
-  "main": "dist/lib/index.js",
+  "main": "dist/index.js",
   "bin": "dist/cmd/index.js",
-  "types": "dist/lib/index.d.ts",
+  "types": "dist/index.d.ts",
   "files:": [
     "dist/**/*"
   ],
@@ -49,7 +49,6 @@
     "@types/vinyl-buffer": "^1.0.0",
     "@types/vinyl-fs": "^2.4.12",
     "@types/vinyl-source-stream": "^0.0.30",
-    "chalk": "4.1.2",
     "commander": "^9.1.0",
     "commonjs": "^0.0.1",
     "copyfiles": "^2.4.1",
