--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rm -rf bin",
     "build": "yarn run clean && yarn tsc && yarn copyfiles -e \"./src/cmd/**/*.ts\" -u 2 \"./src/cmd/**/*\" ./bin/"
   },
   "repository": "github:missmoode/bloom",
@@ -51,7 +51,6 @@
     "@types/vinyl-source-stream": "^0.0.30",
     "commander": "^9.1.0",
     "commonjs": "^0.0.1",
-    "copyfiles": "^2.4.1",
     "enquirer": "^2.3.6",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
@@ -72,9 +71,15 @@
     "@types/offscreencanvas": "^2019.6.4",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.12.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "typescript": "^4.6.3",
     "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "dependenciesMeta": {
+    "@rollup/plugin-babel@5.3.1": {
+      "unplugged": true
+    }
   }
 }
