--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.70",
   "description": "A library for creating and packaging pixi-based games",
   "main": "src/index.js",
-  "bin": "bin/index.js",
+  "bin": "bin/start.js",
   "files:": [
     "dist/**/*"
   ],
