--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/color-rgba": "^2.1.0",
     "@types/gulp-rename": "^2.0.1",
     "@types/gulp-sourcemaps": "^0.0.35",
+    "@types/gulp-tap": "^1.0.1",
     "@types/gulp-template": "^5.0.1",
     "@types/gulp-terser": "^1.2.1",
     "@types/merge2": "^1.3.1",
@@ -54,6 +55,7 @@
     "enquirer": "^2.3.6",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-tap": "^2.0.0",
     "gulp-template": "^5.0.0",
     "gulp-terser": "^2.1.0",
     "listr2": "^4.0.5",
