--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bloom",
   "author": "missmoode",
-  "version": "1.0.78",
+  "version": "0.0.78",
   "description": "A library for creating and packaging pixi-based games",
   "main": "src/lib/index.ts",
   "bin": "bin/start.js",
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "clean": "rm -rf bin",
-    "build": "yarn run clean && yarn tsc && yarn copyfiles -e \"./src/cmd/**/*.ts\" -u 2 \"./src/cmd/**/*\" ./bin/"
+    "build": "yarn run clean && yarn tsc --project ./src/cmd/tsconfig.json && yarn copyfiles -e \"./src/cmd/**/*.ts\" -u 2 \"./src/cmd/**/*\" ./bin/ && rm -f ./bin/tsconfig.json"
   },
   "repository": "github:missmoode/bloom",
   "license": "MIT",
