--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pixi/settings": "^6.3.0",
     "@pixi/ticker": "^6.3.0",
     "@pixi/utils": "^6.3.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-json": "^4.1.0",
@@ -42,6 +43,7 @@
     "@types/gulp-tap": "^1.0.1",
     "@types/gulp-template": "^5.0.1",
     "@types/gulp-terser": "^1.2.1",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/merge2": "^1.3.1",
     "@types/node": "^17.0.23",
     "@types/rimraf": "^3.0.2",
@@ -59,10 +61,12 @@
     "gulp-template": "^5.0.0",
     "gulp-terser": "^2.1.0",
     "listr2": "^4.0.5",
+    "lodash.isequal": "^4.5.0",
     "merge2": "^1.4.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-polyfill-node": "^0.9.0",
+    "type-signals": "^1.1.0",
     "vinyl": "^2.2.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-fs": "^3.0.3",
