--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@pixi/app": "^6.3.0",
     "@pixi/constants": "^6.3.0",
     "@pixi/core": "^6.3.0",
     "@pixi/display": "^6.3.0",
+    "@pixi/graphics": "^6.3.0",
     "@pixi/loaders": "^6.3.0",
     "@pixi/math": "^6.3.0",
     "@pixi/runner": "^6.3.0",
     "@pixi/settings": "^6.3.0",
+    "@pixi/sprite": "^6.3.0",
     "@pixi/ticker": "^6.3.0",
     "@pixi/utils": "^6.3.0",
     "@reduxjs/toolkit": "^1.8.1",
