use pixi.js instead

--- a/package.json
+++ b/package.json
@@ -19,17 +19,6 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@pixi/constants": "^6.3.0",
-    "@pixi/core": "^6.3.0",
-    "@pixi/display": "^6.3.0",
-    "@pixi/graphics": "^6.3.0",
-    "@pixi/loaders": "^6.3.0",
-    "@pixi/math": "^6.3.0",
-    "@pixi/runner": "^6.3.0",
-    "@pixi/settings": "^6.3.0",
-    "@pixi/sprite": "^6.3.0",
-    "@pixi/ticker": "^6.3.0",
-    "@pixi/utils": "^6.3.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
@@ -64,6 +53,7 @@
     "listr2": "^4.0.5",
     "lodash.isequal": "^4.5.0",
     "merge2": "^1.4.1",
+    "pixi.js": "^6.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-polyfill-node": "^0.9.0",
