--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/merge2": "^1.3.1",
     "@types/node": "^17.0.23",
+    "@types/peerjs": "^1.1.0",
     "@types/rimraf": "^3.0.2",
     "@types/sharp": "^0.30.0",
     "@types/vinyl": "^2.0.6",
@@ -53,6 +54,7 @@
     "listr2": "^4.0.5",
     "lodash.isequal": "^4.5.0",
     "merge2": "^1.4.1",
+    "peerjs": "^1.3.2",
     "pixi.js": "^6.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
