--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "copyfiles": "^2.4.1",
     "eslint": "^8.13.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "typedoc": "^0.22.15",
     "typescript": "^4.6.3",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
