--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
     "@types/gulp-tap": "^1.0.1",
     "@types/gulp-template": "^5.0.1",
     "@types/gulp-terser": "^1.2.1",
-    "@types/lodash.isequal": "^4.5.5",
     "@types/merge2": "^1.3.1",
     "@types/node": "^17.0.23",
-    "@types/peerjs": "^1.1.0",
     "@types/rimraf": "^3.0.2",
     "@types/sharp": "^0.30.0",
+    "@types/uuid": "^8.3.4",
     "@types/vinyl": "^2.0.6",
     "@types/vinyl-buffer": "^1.0.0",
     "@types/vinyl-fs": "^2.4.12",
@@ -52,7 +51,6 @@
     "gulp-template": "^5.0.0",
     "gulp-terser": "^2.1.0",
     "listr2": "^4.0.5",
-    "lodash.isequal": "^4.5.0",
     "merge2": "^1.4.1",
     "peerjs": "^1.3.2",
     "pixi.js": "^6.3.0",
@@ -60,6 +58,7 @@
     "rollup": "^2.70.1",
     "rollup-plugin-polyfill-node": "^0.9.0",
     "type-signals": "^1.1.0",
+    "uuid": "^8.3.2",
     "vinyl": "^2.2.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-fs": "^3.0.3",
@@ -74,6 +73,8 @@
     "eslint": "^8.13.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "typedoc": "^0.22.15",
+    "typedoc-github-wiki-theme": "^1.0.0",
+    "typedoc-plugin-markdown": "^3.12.1",
     "typescript": "^4.6.3",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
