--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@types/merge2": "^1.3.1",
     "@types/node": "^17.0.23",
     "@types/rimraf": "^3.0.2",
-    "@types/sharp": "^0.30.0",
     "@types/uuid": "^8.3.4",
     "@types/vinyl": "^2.0.6",
     "@types/vinyl-buffer": "^1.0.0",
@@ -56,6 +55,7 @@
     "pixi.js": "^6.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-polyfill-node": "^0.9.0",
     "type-signals": "^1.1.0",
     "uuid": "^8.3.2",
@@ -64,7 +64,6 @@
     "vinyl-fs": "^3.0.3",
     "vinyl-source-stream": "^2.0.0"
   },
-  "packageManager": "yarn@3.2.0",
   "devDependencies": {
     "@types/offscreencanvas": "^2019.6.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
