--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@types/merge2": "^1.3.1",
     "@types/node": "^17.0.36",
     "@types/rimraf": "^3.0.2",
+    "@types/simple-peer": "^9.11.4",
     "@types/uuid": "^8.3.4",
     "@types/vinyl": "^2.0.6",
     "@types/vinyl-buffer": "^1.0.0",
     "@types/vinyl-fs": "^2.4.12",
     "@types/vinyl-source-stream": "^0.0.30",
+    "buffer": "^6.0.3",
     "commander": "^9.1.0",
     "commonjs": "^0.0.1",
     "enquirer": "^2.3.6",
@@ -51,12 +53,12 @@
     "gulp-terser": "^2.1.0",
     "listr2": "^4.0.5",
     "merge2": "^1.4.1",
-    "peerjs": "^1.3.2",
     "pixi.js": "^6.3.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-polyfill-node": "^0.9.0",
+    "simple-peer": "^9.11.1",
     "type-signals": "^1.1.0",
     "uuid": "^8.3.2",
     "vinyl": "^2.2.1",
